--- a/BCWeather/BCWeather/Info.plist
+++ b/BCWeather/BCWeather/Info.plist
@@ -18,6 +18,10 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>googleMapAPIKey</key>
+	<string>AIzaSyBN8SbgjKWD7_UGZGH4sqxjbmZZ96D1YV4</string>
+	<key>openWeatherAPIKey</key>
+	<string>65ff393e98dccb396a8fc6d8bd3b7bf4</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
